--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,28 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>4JavaLab4</artifactId>
+    <artifactId>LabaCSV</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jumpmind.symmetric</groupId>
+            <artifactId>symmetric-csv</artifactId>
+            <version>3.5.19</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.ninecode.cim</groupId>
+            <artifactId>CIMReader</artifactId>
+            <version>2.12-3.0.1-5.1.1</version>
+        </dependency>
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
